[package]
edition = "2021"
name = "meme_finder"
version = "0.2.1"
authors = ["mwaitzman@outlook.com"]
license = "AGPL-3.0"


[dependencies]
# for OCR
leptess = "0.13.2"
# for parallelism
rayon = "1.5.1"
# for parallelism
crossbeam = "0.8.1"
# for command line argument handling
clap = { version = "^3.1", features = ["cargo"]}
# for recursive directory traversal
walkdir = "2.3.2"
# for detecting image files
infer = "0.7.0"
# to easily make text colored (may very well be replaced by something more advanced later on)
colored = "2"
# for tilde expansion in paths
home-dir = "^0.1.0"
# fast concurrent hashmap for storing the image hashes and data
#CHECK: is the rayon feature currently unused? disable if so
dashmap = {version = "^5.2.0", features = ["rayon", "serde"]}
# handles the (de)serialization
serde = "1.0.136"
# serialization file format
ron = "0.7.0"
# for finding the user's cache directory
dirs = "4"
# for hashing the images
seahash = "4.1"
# for logging
#paris = {version = "1.5", features = ["timestamps", "macros", "no_logger"]}
# for viewing the matching images in the terminal
viuer = "0.6" #CONSIDER: enabling the sixel feature at some point

[profile.release]
# faster runtime speed, slower compilation
lto = true
# (usually) faster runtime speed at the cost of using a maximum of $(codegen-units) threads (number chosen so as to be able to use 7/8 cores on my CPU)
codegen-units = 7
#WATCH: might cause problems down the line
panic = "abort"